updates for PHP

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "source.organizeImports": "always"
     },
     "rust-analyzer.procMacro.ignored": {
-        "napi-derive": ["napi"]
+        "napi-derive": [
+            "napi"
+        ]
     },
     "editor.formatOnSave": true,
     "files.insertFinalNewline": true,
@@ -70,6 +72,99 @@
     "files.associations": {
         "**/frontmatter.json": "jsonc",
         "**/.frontmatter/config/*.json": "jsonc",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "php_redis.h": "c",
+        "__bit_reference": "c",
+        "__hash_table": "c",
+        "__locale": "c",
+        "__node_handle": "c",
+        "__split_buffer": "c",
+        "__verbose_abort": "c",
+        "array": "c",
+        "bitset": "c",
+        "cctype": "c",
+        "clocale": "c",
+        "cmath": "c",
+        "complex": "c",
+        "cstdarg": "c",
+        "cstdint": "c",
+        "cstdio": "c",
+        "cstdlib": "c",
+        "cstring": "c",
+        "ctime": "c",
+        "cwchar": "c",
+        "cwctype": "c",
+        "execution": "c",
+        "memory": "c",
+        "initializer_list": "c",
+        "ios": "c",
+        "istream": "c",
+        "limits": "c",
+        "locale": "c",
+        "mutex": "c",
+        "new": "c",
+        "optional": "c",
+        "print": "c",
+        "queue": "c",
+        "sstream": "c",
+        "stack": "c",
+        "stdexcept": "c",
+        "streambuf": "c",
+        "string": "c",
+        "string_view": "c",
+        "typeinfo": "c",
+        "unordered_map": "c",
+        "variant": "c",
+        "vector": "c",
+        "__bits": "c",
+        "__config": "c",
+        "__debug": "c",
+        "__nullptr": "c",
+        "__string": "c",
+        "__threading_support": "c",
+        "__tuple": "c",
+        "atomic": "c",
+        "bit": "c",
+        "chrono": "c",
+        "compare": "c",
+        "concepts": "c",
+        "cstddef": "c",
+        "exception": "c",
+        "format": "c",
+        "ostream": "c",
+        "system_error": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "algorithm": "c",
+        "redis_arginfo.h": "c",
+        "redis_commands.h": "c",
+        "glide_bindings.h": "c",
+        "command_response.h": "c",
+        "deque": "c",
+        "ratio": "c",
+        "__memory": "c",
+        "random": "c",
+        "redis_cluster.h": "c",
+        "redis_glide.h": "c",
+        "string.h": "c",
+        "valkey_glide_z_common.h": "c",
+        "stdint.h": "c",
+        "stddef.h": "c",
+        "stdbool.h": "c",
+        "connection_request.pb-c.h": "c",
+        "config.h": "c",
+        "stdio.h": "c",
+        "valkey_glide_s_common.h": "c",
+        "valkey_glide_list_common.h": "c",
+        "__errc": "c",
+        "__mutex_base": "c",
+        "__tree": "c",
+        "charconv": "c",
+        "condition_variable": "c",
+        "forward_list": "c",
+        "iostream": "c",
+        "map": "c",
+        "numeric": "c",
+        "valkey_glide_commands_common.h": "c"
     }
 }
