--- a/ffi/cbindgen.toml
+++ b/ffi/cbindgen.toml
@@ -1,7 +1,7 @@
 # Copyright Valkey GLIDE Project Contributors - SPDX Identifier: Apache-2.0
 language = "C"
 
-header = "/* Copyright Valkey GLIDE Project Contributors - SPDX Identifier: Apache-2.0 */"
+header = "#pragma once"
 
 [parse]
 parse_deps = true
