tests were failing since servers were not executed

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -128,9 +128,18 @@ jobs:
               run: |
                   set -e  # Exit on any error
                   
+                  # Ensure /usr/local/bin is in PATH (where valkey-server is installed)
+                  export PATH="/usr/local/bin:$PATH"
+                  
                   echo "=== DEBUG: Current directory and files ==="
                   pwd
                   ls -la
+                  
+                  echo "=== DEBUG: Current PATH ==="
+                  echo "PATH=$PATH"
+                  
+                  echo "=== DEBUG: Checking for installed binaries in /usr/local/bin ==="
+                  ls -la /usr/local/bin/ | grep -E "(valkey|redis)" || echo "No valkey/redis binaries in /usr/local/bin"
                   
                   echo "=== DEBUG: Checking script permissions ==="
                   ls -la start_valkey_with_replicas.sh create-valkey-cluster.sh
@@ -145,6 +154,12 @@ jobs:
                   echo "=== DEBUG: Checking for valkey-server ==="
                   which valkey-server || echo "valkey-server not found in PATH"
                   
+                  # Check alternative locations and names
+                  echo "=== DEBUG: Checking alternative binary names ==="
+                  which redis-server || echo "redis-server not found in PATH"
+                  which valkey-cli || echo "valkey-cli not found in PATH"
+                  which redis-cli || echo "redis-cli not found in PATH"
+                  
                   # Start standalone servers (6379, 6380, 6381)
                   echo "=== Starting standalone Valkey servers ==="
                   ./start_valkey_with_replicas.sh
@@ -155,7 +170,7 @@ jobs:
                   
                   # Check if servers are running
                   echo "=== Checking standalone server status ==="
-                  ps aux | grep valkey-server | grep -v grep || echo "No valkey-server processes found"
+                  ps aux | grep -E "(valkey|redis)-server" | grep -v grep || echo "No valkey/redis-server processes found"
                   
                   # Start cluster servers (7001-7006)
                   echo "=== Starting Valkey cluster ==="
@@ -163,7 +178,7 @@ jobs:
                   
                   # Final server status check
                   echo "=== Final server status check ==="
-                  ps aux | grep valkey-server | grep -v grep || echo "No valkey-server processes found"
+                  ps aux | grep -E "(valkey|redis)-server" | grep -v grep || echo "No valkey/redis-server processes found"
                   echo "=== Valkey servers startup completed ==="
 
             - name: Run PHP extension tests
@@ -362,9 +377,18 @@ jobs:
               run: |
                   set -e  # Exit on any error
                   
+                  # Ensure /usr/local/bin is in PATH (where valkey-server is installed)
+                  export PATH="/usr/local/bin:$PATH"
+                  
                   echo "=== DEBUG: Current directory and files ==="
                   pwd
                   ls -la
+                  
+                  echo "=== DEBUG: Current PATH ==="
+                  echo "PATH=$PATH"
+                  
+                  echo "=== DEBUG: Checking for installed binaries in /usr/local/bin ==="
+                  ls -la /usr/local/bin/ | grep -E "(valkey|redis)" || echo "No valkey/redis binaries in /usr/local/bin"
                   
                   echo "=== DEBUG: Checking script permissions ==="
                   ls -la start_valkey_with_replicas.sh create-valkey-cluster.sh
@@ -379,6 +403,12 @@ jobs:
                   echo "=== DEBUG: Checking for valkey-server ==="
                   which valkey-server || echo "valkey-server not found in PATH"
                   
+                  # Check alternative locations and names
+                  echo "=== DEBUG: Checking alternative binary names ==="
+                  which redis-server || echo "redis-server not found in PATH"
+                  which valkey-cli || echo "valkey-cli not found in PATH"
+                  which redis-cli || echo "redis-cli not found in PATH"
+                  
                   # Start standalone servers (6379, 6380, 6381)
                   echo "=== Starting standalone Valkey servers ==="
                   ./start_valkey_with_replicas.sh
@@ -389,7 +419,7 @@ jobs:
                   
                   # Check if servers are running
                   echo "=== Checking standalone server status ==="
-                  ps aux | grep valkey-server | grep -v grep || echo "No valkey-server processes found"
+                  ps aux | grep -E "(valkey|redis)-server" | grep -v grep || echo "No valkey/redis-server processes found"
                   
                   # Start cluster servers (7001-7006)
                   echo "=== Starting Valkey cluster ==="
@@ -397,7 +427,7 @@ jobs:
                   
                   # Final server status check
                   echo "=== Final server status check ==="
-                  ps aux | grep valkey-server | grep -v grep || echo "No valkey-server processes found"
+                  ps aux | grep -E "(valkey|redis)-server" | grep -v grep || echo "No valkey/redis-server processes found"
                   echo "=== Valkey servers startup completed ==="
 
             - name: Run PHP extension tests
