--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -381,6 +381,9 @@ jobs:
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
 
+            - name: Install cbindgen
+              run: cargo install cbindgen
+
             - uses: actions/cache@v4
               with:
                   path: |
