--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -165,7 +165,10 @@
         "iostream": "c",
         "map": "c",
         "numeric": "c",
-        "valkey_glide_commands_common.h": "c"
+        "valkey_glide_commands_common.h": "c",
+        "stdlib.h": "c",
+        "valkey_glide_cluster_arginfo.h": "c",
+        "valkey_glide_arginfo.h": "c"
     },
     "cmake.sourceDirectory": "/Users/asafp/work/valkey-glide-php/cpp",
     "php.validate.enable": true,
